# license-plate-redactor-v2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check_video_info.py  copy-models.sh  plan-licensePlateRedactor.prompt.md  vcpkg.json
cmake/: CompilerSettings.cmake  FindOpenCV.cmake
docs/: VIDEO_FILE_SIZE.md
models/: .gitkeep  README.md  download-models.sh
scripts/: install-dependencies.sh  setup-vcpkg.sh
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  README.md  VideoProcessor.cpp  VideoProcessor.h
tests/data/: .gitkeep  README.md
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
